added resbar bg coloring to options window as well

--- a/changelog.txt
+++ b/changelog.txt
@@ -10,7 +10,7 @@ Other:
  • Advplayerlist can auto collapse (default disabled) in options: Interface -> "Playerlist auto collapses"
  • Player camara tracking also limits view to players viewpoint and losmode
  • Removed "GroupMove" widget because it had side effects/downsides
- • Top bar: when low energy: red background, when overflowing: resource colored (/resbartint to toggle on/off)
+ • Top bar: when low energy: red background, when overflowing: resource colored (see options or /resbartint to toggle)
  • Closing game when loaded unsupported AI (supported: DAI, KAIK, NullAI, Chickens)
  • Added lups heat thrusters to armatlas/corvalk + reduces size of air thrusters overall
  • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
