--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.
 Balance:
  • More frequent re-aiming (each frame) + starts targetting before units enters range (at maxrange + 10%)
  • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)
+ • Arm Missile Ship damages increased 800 -> 900 (damages vs commanders unchanged)
 
 Other:
  • Added option "Move Window Position"
