--- a/changelog.txt
+++ b/changelog.txt
@@ -1,45 +1,45 @@
 ﻿10.11 -> 10.12
-XX/XX/2018
+16/09/2018
 
 IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.
 
 Balance:
- • Testing splitting ballistic missiles on missile ships
- • More frequent re-aiming (each frame) + starts targetting before units enters range (at maxrange + 10%)
+ • Testing splitting ballistic missiles for T2 missile ships (splits into 6 (arm) or 8(core) projectiles)
+ • Continuous aiming: units readjust their aim much more often + start aiming when enemy is still at maxrange + 10%
  • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)
- • Arm Missile Ship weapon changed into a ballistic missile that splits into 6 (arm) or 8(core) projectiles that will crush on target
- • Toaster range 1335 => 1390, Ambusher range 1320 => 1380
- • MERL range 1215 -> 1300, Diplomat range 1240 -> 1310
  • Ships/Sea wrecks durability increased ("health" + 100%)
- • Floating mine AoE reduced from 350 to 250, damages to subs reduced from 1750 to 1100, edge effectiveness reduced from 1.00 to 0.65
+ • Floating mine AoE reduced 30%, damages to subs from 1750 -> 1100, edge effectiveness from 1.00 -> 0.65
+ • Toaster range 1335 -> 1390, Ambusher range 1320 -> 1380
+ • MERL range 1215 -> 1300, Diplomat range 1240 -> 1310
 
 Other:
- • Low poly trees can be set on fire! The fire can propagate and even cause slight damages (1-3/second).
- • Added option "Resolution" (might freeze engine, fixed in version 104.0.1.670)
+ • Engine replacement trees can be set on fire! The fire can propagate and even cause slight damages.
+ • Added option "Resolution" (might freeze engine... in windowed mode)
  • Added option "Move Window Position"
- • Added option "Contain mouse inside window"
- • Added options "Camera smoothing" and "Tracking cam smoothing" slider
+ • Added option "Contain mouse"
  • Added option "Tree Wind" (before it was only active when barmodels enabled)
- • Player camara tracking also limits view to players viewpoint and losmode
- • Resource bars: when low energy: red background, when overflowing: resource colored
- • Advplayerlist auto collapses, availible in options: Interface -> "Playerlist auto collapses"
- • Changed some air thrusters sizes and they wont show when plane is crashing
+ • Added options "Camera smoothing" and "Tracking cam smoothing" slider
+ • Camara tracking limits view to the tracked player's viewpoint and sight
+ • Resource bars: low energy: red background tint, when overflowing: resource colored
  • Added lups thrusters to armatlas/corvalk/banshee
- • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
- • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'
  • Added the "Traitor" award = destroying allied units.
- • Unit stats show again when having unit selected (unless you have chat input showing)
- • Toggle the background for chat console optionally with /chatbackground
+ • Chat console background is back, toggle with /chatbackground
+ • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'
+ • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
+ • Advplayerlist auto collapses, availible in options: Interface -> "Playerlist auto collapses"
 
 Fixes:
- • gfx_tree_feller: fall in the correct direction (depending on blast origin/unit position)
- • Options widget remembers/restores some spring config settings (switching engines lately made config be reset)
  • Auto closing game when loaded unsupported AI (supported: DAI, KAIK, NullAI, Chickens)
- • Fixed DAI echospam + working with multiple DAI bots + behavior improvements
- • Decoy com attacked warning sound is now a regular unit under attack sound
- • Fixed "map edge extension" not always showing up when it should
+ • Trees fall in the correct direction regarding blast origin/unit position
+ • Options widget remembers/restores some spring config settings (switching engines lately made config reset)
+ • Fixed DAI echo spam + working with multiple DAI bots + behavior improvements
+ • Decoy com attacked warning sound is now a regular unit under attack one
+ • Team AI wont give you its units any longer when you do /take
+ • Fixed "map edge extension" not always showing
  • Fixed "States Prefs" widget overriding config table with empty table after loading a replay
  • Fixed Bloom rendering the map black on certain maps
+ • Unit stats shows again when having unit selected (unless you type chat input)
+ • Air thrusters wont show while plane is crashing
 
 Removed:
  • Removed "SmoothCam" widget: its integrated into options widget
