--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,9 @@ Balance:
 
 Other:
  • Removed unba commanders modoption
+ • Fixed continuously aiming change always being able to fire, even when turrent was way off
+ • Fixed made Anti Aliasing options slider work again (also its MSAA instead of FSAA now)
+ • New flak hit expolsion effecct + crashing airplane smoke trails
 
 
 10.12 -> 10.13
