--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ XX/XX/2018
 Balance:
  • Comblast lethal range to other commanders extended (35%)
  • T1 air transports vertical speed reduced 25% + cruisealtitude 65 -> 70
+ • Vehicles acceleration and brakerate are now based on maxVel and turnrate
  • Arm and Core vehicles : scouts/light tanks/medium tanks +10% turnrate
  • Stumpy Raider Bulldog and Reaper -5% maxpseed and +5% metal cost
  • Penetrator and Banisher -5% maxspeed
