--- a/changelog.txt
+++ b/changelog.txt
@@ -12,14 +12,15 @@ Balance:
  • Arm and Core Ressurect kbots +20% reclaim speed
 
 Other:
- • Fixed: popups units wont start targeting unless enemy is withing weapon range
+ • Fixed: popup units wont start targeting unless enemy is within weapon range
  • Fixed: continuous aiming change always being able to fire, even when turret was way off
  • Added: Options > Game > '   include builders' .. in area-selection, you can disable to exclude builders
+ • Added option: nano effect: beam or particles
+ • Added lights to laser hits, barrel fire, air thrusters, nano beams and fusion balls
  • Made Anti Aliasing options slider work again, and limited max value of 4 (MSAA is used instead of FSAA)
  • New flak explosion effect + custom crashing airplane smoke trails
- • Added option: nano beams or particles
- • Added lights to laser hits, barrel fire, air thrusters, nano beams and fusion balls
  • Removed dgun range circle when enemy com gets near
+ • Reduced footprint of engine replacement trees + tree fire wont spread as wildly
 
 
 10.12 -> 10.13
