--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ Balance:
  • Penetrator reversemaxspeed from 60% of maxspeed to 40%
  • Arm and Core Ressurect kbots +20% reclaim speed
  • Maverick +7% hp (from 1300 to 1400hp)
+ • Storm Rocko Thud Hammer : torso speed rotation increased
 
 Other:
  • Fixed: popup units wont start targeting unless enemy is within weapon range
