--- a/changelog.txt
+++ b/changelog.txt
@@ -19,7 +19,8 @@ Other:
  • Fixed: popup units wont start targeting unless enemy is within weapon range
  • Fixed: continuous aiming change always being able to fire, even when turret was way off
  • Added: Options > Game > '   include builders' .. in area-selection, you can disable to exclude builders
- • Added: Options Game > "passive builders": nanos, cons, labs
+ • Added: Options > Game > "passive builders": nanos, cons, labs
+ • Added: Options > Graphics > Shadows: "max quality", "min quality", "disable at average FPS"
  • Added widget: "DGun no ground enemy", mainly to prevent snap dgun on close raiding units (default disabled)
  • Added option: nano effect: beam or particles (old effect)
  • Added lights to laser hits, barrel fire, air thrusters, nano beams and fusion balls
