--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,9 @@ XX/XX/2018
 
  • Fixed com counter
  • Renamed modoption 'ffa' to 'ffa_mode'
+ • Made mapmods work again (modoption: allowmapmutators, default enabled)
  • Player-TV widget enabled by default (shows on top of advplayerslist when spectator)
+ • Fixed too bright laserhit lights
 
 
 10.16 -> 10.17
