--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,13 @@
 ﻿10.18 -> 10.19
 XX/XX/2018
 
+ • Hover constructors buildpower 140->110
  • Added option: GUI opacity
  • Removed iconset: modern_simplified
  • Removed firestate button from anti's
  • Fixed pyro pilotlight showing when out of los
  • Added modoption: "globallos", enables full visibility
- • DAI general improvements and units are categorized to provide more variability in behaviours
- • DAI now uses emp/tactical/nukes + Longrange weapons remember seen buildings and try to take these down.
+ • DAI uses emp/tactical/nukes + remembers seen buildings and try to take these down.
 
 
 10.17 -> 10.18
