--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ XX/XX/2018
  • Fixed pyro pilotlight showing when out of los
  • Added modoption: "globallos", enables full visibility
  • DAI uses emp/tactical/nukes + remembers seen buildings and try to take these down.
+ • Added "Music Player" widget. No music included.
 
 
 10.17 -> 10.18
