--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ﻿10.18 -> 10.19
-XX/XX/2018
+15/12/2018
 
  • Hover constructors buildpower 140->110
  • Added option: GUI opacity
@@ -9,7 +9,7 @@ XX/XX/2018
  • Fixed pyro pilotlight showing when out of los
  • Added modoption: "globallos", enables full visibility
  • DAI uses emp/tactical/nukes + remembers seen buildings and try to take these down.
- • Added "Music Player" widget. No music included.
+ • Added "Music Player" widget. Music excluded. (download from https://springfiles.com/spring/games/ota-music-ba-v10)
 
 
 10.17 -> 10.18
