--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,8 @@
 ﻿10.19 -> 10.20
-XX/XX/XXXX
+XX/12/2018
 
-Vehicles Speeds test
-
- • Applied a maxVelocity equal to initial BA 9.46 value *0.66 + initial BA9.46 turninplacespeedlimitvalue*0.34 which *seems to* simulate 9.46, engine 103, speeds on BA10 engine 104
- • Apart from the maxvelocities, the basedefs are still BA 10.19: meaning turninplace is enabled, the turninplace anglelimit is 90 degrees, and the accel/brakerate values are directly linked to maxVelocity and turnrate.
- • The goal is to replicate the performing speeds of 9.46 while keeping the v10+ improvements in overall maneuvrability and responsiveness.
+ • Lowered vehicle max speeds, aiming to be more comparingly to BA 9.46
+ • Fixed xmasballs taking damage and area targetting onto them
 
 
 10.18 -> 10.19
