--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,8 @@
 ﻿10.19 -> 10.20
-XX/12/2018
+20/12/2018
 
- • Lowered vehicle max speeds, aiming to be more comparable to BA 9.46
- • Fixed xmasballs taking damage and area targetting onto them
+ • Lowered vehicle max speeds, aiming to be more comparable with BA 9.46
+ • Fixed xmasballs taking damage and being area-targetable
 
 
 10.18 -> 10.19
