--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
-﻿10.19 -> 10.20
+﻿10.20 -> 10.21
+XX/XX/XXXX
+
+ • unit_targetting_priorities compatibility for latest maintenance engines (960+) (issue #6112)
+
+
+10.19 -> 10.20
 20/12/2018
 
  • Lowered vehicle max speeds, aiming to be more comparable with BA 9.46
