--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 ﻿10.20 -> 10.21
 XX/XX/2019
 
- • EMP units wont target non-emapable units any longer when patrolling
+ • EMP units (bladewing/emp-spider/stiletto/dragonfly) wont target non-emapable/underwater units anymore
  • Fixed fusions globes not hiding when LUPS is enabled
  • Fixed critters gadget casually triggering non game-breaking errors
  • unit_targetting_priorities compatibility for latest maintenance engines (963+) (issue #6112)
