--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
-﻿10.21 -> 10.22
+﻿10.22 -> 10.23
+XX/02/2019
+
+ • Hovercraft movement correction due to 104 engine
+ • Rock/storm rocket speed as it was in 9.46
+ • Nanoframe blocking start percentage reduced
+ • Resource bars show 'expense' value again
+ • Advplayerlist spec-color fix when AI teams are preset
+ • More deathmessages
+
+
+10.21 -> 10.22
 23/01/2019
 
 NOTE: Requires 104.0.1.969 or later engine versions
