--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,17 @@
-﻿10.22 -> 10.23
+﻿10.23 -> 10.24
+XX/XX/2019
+ • Destroyer: reverted plasma weapon damages, accuracy, reloadtime to 9.46 values, restored DC damages and firerate to 9.46 values, increased speed +15%, decreased hp -10%
+ • Patrol Boat/ligh anti air/sonar: +15% size, hp 120 -> 700, speed -30%, dps +60%, aa damages +66%, aa reloadTime -40%, mcost + 190%, ecost +70%, buildTime +100%)
+ • Corvettes: sizes -5%, ARM: hp -15%, m/e costs -15%, CORE: hp -10%, m/e costs -7%
+ • Removed Depthcharge Ships
+ • T2 submarines: -10%speed and -6% reloadTime
+ • Battleships: +10% aoe on plasma cannons
+ • Arm Offshore Mex: model "base" piece sized up a bit
+ • Missile Ships: Cluster Missiles +25% aoe and +16% damages
+ • Ships accelerations/brakerates now based on maxSpeed and turnrate
+
+
+10.22 -> 10.23
 06/02/2019
 
  • Hovercraft movement correction due to 104 engine (same as vehicle correction in 10.20)
