--- a/changelog.txt
+++ b/changelog.txt
@@ -6,14 +6,17 @@ XX/XX/2019
 
 Sea
  • Destroyer: reverted plasma weapon damages, accuracy, reloadtime to 9.46 values, restored DC damages and firerate to 9.46 values, increased speed +15%, decreased hp -10%
- • Patrol Boat/ligh anti air/sonar: +15% size, hp 120 -> 700, speed -30%, dps +60%, aa damages +66%, aa reloadTime -40%, mcost + 190%, ecost +70%, buildTime +100%)
- • Corvettes: sizes -5%, ARM: hp -15%, m/e costs -15%, CORE: hp -10%, m/e costs -7%
+ • Removed Gun Platform
+ • Torpedo Launchers -10% ecost, -10% mcost, -20% buildTime, -15% hp
+ • Patrol Boat/ligh anti air/sonar: +15% size, hp 120 -> 700, speed -26%, dps +60%, aa damages +66%, aa reloadTime -40%, mcost + 190%, ecost +70%, buildTime +100%)
+ • Corvettes: speed +3%, sizes -5%, ARM: hp -15%, m/e costs -15%, CORE: hp -10%, m/e costs -7%
  • Removed Depthcharge Ships
- • T2 submarines: -10%speed and -6% reloadTime
+ • T2 submarines: -10%speed and -6% reloadTime, removed reverse move
+ • T1 submarines: removed reverse move, increased damages to subs from 150 to 180
  • Battleships: +10% aoe on plasma cannons
  • Arm Offshore Mex: model "base" piece sized up a bit
  • Missile Ships: Cluster Missiles +25% aoe and +16% damages
- • Ships accelerations/brakerates now based on maxSpeed and turnrate
+ • Ships accelerations/brakerates now based on maxSpeed and turnrate. Turnrates globally increased for ships (+50%)
  • Sea aircons same buildpower (+10%) as regular t1 aircons
 
 
