--- a/changelog.txt
+++ b/changelog.txt
@@ -9,7 +9,7 @@ Sea
  • Removed Gun Platform
  • Torpedo Launchers -10% ecost, -10% mcost, -20% buildTime, -15% hp
  • Patrol Boat/ligh anti air/sonar: +15% size, hp 120 -> 700, speed -26%, dps +60%, aa damages +66%, aa reloadTime -40%, mcost + 190%, ecost +70%, buildTime +100%)
- • Corvettes: speed +3%, sizes -5%, ARM: hp -15%, m/e costs -15%, CORE: hp -10%, m/e costs -7%
+ • Corvettes: speed +3%, ARM: hp -15%, m/e costs -15%, size -10%, CORE: hp -10%, m/e costs -7%, size -5%
  • Removed Depthcharge Ships
  • T2 submarines: -10%speed and -6% reloadTime, removed reverse move
  • T1 submarines: removed reverse move, increased damages to subs from 150 to 180
