--- a/changelog.txt
+++ b/changelog.txt
@@ -18,7 +18,7 @@ Sea
  • Missile Ships: Cluster Missiles +25% aoe and +16% damages
  • Ships accelerations/brakerates now based on maxSpeed and turnrate. Turnrates globally increased for ships (+50%)
  • Sea aircons same buildpower (+10%) as regular t1 aircons
-
+ • Tidals energy cost -17% (300 -> 250)
 
 10.22 -> 10.23
 06/02/2019
